force-app/main/default/objects/Tournament_Phase__c/Tournament_Phase__c.object-meta.xml
<CustomObject>
    <label>Tournament Phase</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tournament Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>