force-app/main/default/objects/Tournament_Phase__c/fields/Additional_Matches_JSON__c.field-meta.xml
<CustomField>
    <fullName>Additional_Matches_JSON__c</fullName>
    <label>Additional Matches</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>