force-app/main/default/objects/Tournament_Phase__c/fields/Allow_Draws__c.field-meta.xml
<CustomField>
    <fullName>Allow_Draws__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are draw matches allowed?</description>
    <inlineHelpText>Final and 3rd place matches will not be affected by this option</inlineHelpText>
    <label>Allow Draws</label>
    <type>Checkbox</type>
</CustomField>