force-app/main/default/objects/Tournament_Phase__c/fields/Champions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Champions_JSON__c</fullName>
    <label>Champions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>