force-app/main/default/objects/Tournament_Phase__c/fields/Groups_JSON__c.field-meta.xml
<CustomField>
    <fullName>Groups_JSON__c</fullName>
    <label>Groups</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>