force-app/main/default/objects/Tournament_Phase__c/fields/Is_Finished__c.field-meta.xml
<CustomField>
    <fullName>Is_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are all matches in the phase resolved</description>
    <label>Is Finished</label>
    <type>Checkbox</type>
</CustomField>