force-app/main/default/objects/Tournament_Phase__c/fields/Matches_JSON__c.field-meta.xml
<CustomField>
    <fullName>Matches_JSON__c</fullName>
    <label>Matches</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>