force-app/main/default/objects/Tournament_Phase__c/fields/Number_Of_Groups__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Groups__c</fullName>
    <label>Number of Groups</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>