force-app/main/default/objects/Tournament_Phase__c/fields/Number_Of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Participants__c</fullName>
    <label>Number of Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>