force-app/main/default/objects/Tournament_Phase__c/fields/Participants_JSON__c.field-meta.xml
<CustomField>
    <fullName>Participants_JSON__c</fullName>
    <label>Participants</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>