force-app/main/default/objects/Tournament_Phase__c/fields/Points_Per_Draw__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Draw__c</fullName>
    <label>Points per Draw</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>