force-app/main/default/objects/Tournament_Phase__c/fields/Points_Per_Lose__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Lose__c</fullName>
    <label>Points per Lose</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>