force-app/main/default/objects/Tournament_Phase__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>The sequene designating in which order the phases are going</description>
    <label>Sequence</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>