force-app/main/default/objects/Tournament_Phase__c/fields/Third_Place_Match__c.field-meta.xml
<CustomField>
    <fullName>Third_Place_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include match for 3rd place</inlineHelpText>
    <label>3rd Place Match</label>
    <type>Checkbox</type>
</CustomField>