force-app/main/default/objects/Tournament_Phase__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <label>Tournament</label>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Phases</relationshipLabel>
    <relationshipName>Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>