force-app/main/default/objects/Tournament_Phase__c/fields/With_Rematches__c.field-meta.xml
<CustomField>
    <fullName>With_Rematches__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are matches with rematches</description>
    <inlineHelpText>Every match will be included with rematch</inlineHelpText>
    <label>With Rematches</label>
    <type>Checkbox</type>
</CustomField>