force-app/main/default/objects/Tournament_Phase__c/recordTypes/Cup.recordType-meta.xml
<RecordType>
    <fullName>Cup</fullName>
    <active>true</active>
    <label>Cup</label>
</RecordType>