force-app/main/default/objects/Tournament_Phase__c/recordTypes/League.recordType-meta.xml
<RecordType>
    <fullName>League</fullName>
    <active>true</active>
    <label>League</label>
</RecordType>